[project]
name = "customer-support-env"
version = "0.1.0"
description = "E-commerce customer support environment"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"
